<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        
        android:id="@+id/rlSUProfileImage"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <EditText
            android:id="@+id/etSUProfileName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:ems="10"
            android:hint="@string/profile_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/etSUPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etSUProfileName"
            android:layout_below="@+id/etSUProfileName"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
        
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/rlSocialInformation"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rlSUPersonalInformation" >

        <Button
            android:id="@+id/btSUlogin"
            android:layout_width="80dip"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/etSUPhoneNumber"
            android:background="@drawable/sign_up" />

        <Button
            android:id="@+id/btSUDefaultLocation"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btSUlogin"
            android:background="@drawable/default_location" />

        <EditText
            android:id="@+id/etSUPhoneNumber"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSUPersonalInformation"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rlSUProfileImage" >

        <RadioGroup
            android:id="@+id/etSUMaritalStatus"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etSUProfession"
            android:layout_alignParentBottom="true" >
        </RadioGroup>

        <EditText
            android:id="@+id/etSUProfession"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/profession"
            android:inputType="text" />

        <RadioButton
            android:id="@+id/rSingle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etSUMaritalStatus"
            android:layout_below="@+id/etSUProfession"
            android:layout_marginTop="33dp"
            android:checked="true"
            android:text="@string/single" />

        <RadioButton
            android:id="@+id/rMarried"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etSUMaritalStatus"
            android:layout_below="@+id/rSingle"
            android:text="@string/married" />

    </RelativeLayout>

</RelativeLayout>
