<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/etPostStatus"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/write_some_thing"
        android:inputType="text" />

    <EditText
        android:id="@+id/etCPPostTags"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/tvCPAttachTags"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/post_tags"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvCPAttachTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPostStatus"
        android:layout_below="@+id/etPostStatus"
        android:layout_marginTop="22dp"
        android:text="@string/attach_tags" />

    <TextView
        android:id="@+id/tvPostCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etCPPostTags"
        android:layout_below="@+id/etCPPostTags"
        android:layout_marginTop="28dp"
        android:text="@string/post_as_problem" />

    <Button
        android:id="@+id/btCPVideo"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_alignBaseline="@+id/btCPCamera"
        android:layout_marginLeft="68dp"
        android:layout_toRightOf="@+id/tvPostCheck"
        android:background="@drawable/video_icon" />

    <CheckBox
        android:id="@+id/cbPostAsProblem"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/btCPCamera"
        android:layout_alignRight="@+id/btCPVideo"
        android:background="@drawable/check_mark" />

    <Spinner
        android:id="@+id/spCPHashTags"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_above="@+id/tvPostCheck"
        android:layout_alignTop="@+id/etCPPostTags"
        android:layout_marginLeft="53dp"
        android:layout_toRightOf="@+id/tvPostCheck"
        android:background="@drawable/rectangle" />

    <Button
        android:id="@+id/btCPCamera"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_alignRight="@+id/tvCPAttachTags"
        android:layout_below="@+id/tvPostCheck"
        android:layout_marginTop="25dp"
        android:background="@drawable/camera_icon" />

    <Button
        android:id="@+id/btCPHashTag"
        android:layout_width="60dip"
        android:layout_height="80dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvCPAttachTags"
        android:background="@drawable/hash" />

    <Button
        android:id="@+id/btCPPost"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/menu_background"
        android:text="@string/post" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btCPVideo"
        android:layout_marginTop="44dp"
        android:layout_toRightOf="@+id/btCPVideo" >
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/btCPVideo"
        android:background="@drawable/add_image" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btCPCamera"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/btCPVideo"
        android:text="@string/add_images" />

</RelativeLayout>